--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "dev-server": "webpack-dev-server"
   },
   "dependencies": {
-    "@material-ui/core": "^1.2.0",
+    "@material-ui/core": "^4.10.2",
     "@material-ui/icons": "^1.1.0",
     "babel-cli": "^6.24.1",
     "babel-core": "^6.25.0",
@@ -21,14 +21,14 @@
     "live-server": "^1.2.1",
     "node-sass": "^4.14.1",
     "normalize.css": "^7.0.0",
-    "react": "^16.0.0",
-    "react-dom": "^16.0.0",
+    "react": "^16.4.1",
+    "react-dom": "^16.4.1",
     "react-modal": "^2.2.2",
-    "react-reveal": "^1.2.2",
+    "react-reveal": "1.2.2",
     "react-router-dom": "^5.2.0",
-    "react-scroll": "^1.7.9",
-    "react-slick": "^0.23.1",
-    "redux": "^3.7.2",
+    "react-scripts": "1.1.4",
+    "react-scroll": "1.7.9",
+    "react-slick": "0.23.1",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
     "validator": "^8.0.0",
