--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "babel-preset-react": "6.24.1",
     "css-loader": "^0.28.4",
     "live-server": "^1.2.1",
+    "lodash": "^4.17.19",
     "node-sass": "^4.14.1",
     "normalize.css": "^7.0.0",
     "react": "^16.4.1",
@@ -36,7 +37,7 @@
     "style-loader": "^0.18.2",
     "validator": "^8.0.0",
     "webpack": "^3.1.0",
-    "webpack-dev-server": "^2.5.1"
+    "webpack-dev-server": "^2.11.5"
   },
   "devDependencies": {
     "babel-plugin-transform-class-properties": "^6.24.1",
