--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "react-reveal": "1.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "1.1.4",
-    "react-scroll": "1.7.9",
+    "react-scroll": "^1.7.9",
     "react-slick": "0.23.1",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
