--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     "babel-preset-react": "6.24.1",
     "css-loader": "^0.28.4",
     "extract-text-webpack-plugin": "^3.0.2",
-    "live-server": "^1.2.1",
     "lodash": "^4.17.19",
     "node-sass": "^4.14.1",
     "normalize.css": "^7.0.0",
@@ -39,11 +38,12 @@
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
     "validator": "^8.0.0",
-    "webpack": "^3.1.0",
-    "webpack-dev-server": "^2.11.5"
+    "webpack": "^3.1.0"
   },
   "devDependencies": {
     "babel-plugin-transform-class-properties": "^6.24.1",
-    "file-loader": "^6.0.0"
+    "live-server": "^1.2.1",
+    "file-loader": "^6.0.0",
+    "webpack-dev-server": "^2.11.5"
   }
 }
