--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "author": "Aleksander Gorecki",
   "license": "MIT",
+  "proxy": "http://localhost:5000",
   "scripts": {
     "serve": "live-server public/",
     "build:dev": "webpack",
